Extend tool action description

--- a/languages/fictioneer.pot
+++ b/languages/fictioneer.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Fictioneer\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-10 08:01+0000\n"
+"POT-Creation-Date: 2024-10-11 09:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
@@ -676,7 +676,8 @@ msgid ""
 "count for every post that is not trashed. Only perform this action if "
 "necessary, as it is a resource-intensive operation. While generally "
 "considered safe, you should <a href=\"%s\" target=\"_blank\">always make a "
-"backup</a> before performing database operations."
+"backup</a> before performing database operations. Clear your site and theme "
+"caches afterwards."
 msgstr ""
 
 #: includes/functions/settings/_settings_page_tools.php:312
