--- a/languages/fictioneer.pot
+++ b/languages/fictioneer.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Fictioneer\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-13 19:19+0000\n"
+"POT-Creation-Date: 2024-10-14 17:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
@@ -8173,11 +8173,11 @@ msgid "Only applied to the page."
 msgstr ""
 
 #: includes/functions/settings/_settings_page_general.php:1378
-msgid "Only do if lists on story pages are outdated."
+msgid "Only do this if lists on story pages are outdated."
 msgstr ""
 
 #: includes/functions/settings/_settings_page_general.php:1389
-msgid "Only do if shortcodes are not properly updated."
+msgid "Only do this if shortcodes are not properly updated."
 msgstr ""
 
 #: includes/functions/settings/_settings_page_general.php:1489
@@ -9019,7 +9019,7 @@ msgid ""
 "your stories (metadata only)."
 msgstr ""
 
-#: partials/_post.php:23 partials/_latest-posts.php:101
+#: partials/_post.php:24 partials/_latest-posts.php:101
 #, php-format
 msgctxt "Read more link aria label"
 msgid "Continue reading %s"
