--- a/languages/fictioneer.pot
+++ b/languages/fictioneer.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Fictioneer\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-24 00:21+0000\n"
+"POT-Creation-Date: 2025-02-24 09:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
@@ -278,6 +278,17 @@ msgid ""
 "document has been parsed, which means the site technically appears a split "
 "second later. However, if the script is blocked, the site will remain "
 "invisible. This is extremely unlikely, though.</p>"
+msgstr ""
+
+#: includes/functions/settings/_settings_page_general.php:1490
+#, php-format
+msgid ""
+"<p>The query responsible for <a href=\"%s\" target=\"_blank\">finding the "
+"last modified post date</a> can be extremely slow if you have a large "
+"database, potentially causing your site to crash under heavy traffic.</p><p>"
+"While persistent object caching, if available, should prevent this, that has "
+"proven unreliable. This solution caches the date string in a simple database "
+"row for 5 minutes, which is a fast and safe approach.</p>"
 msgstr ""
 
 #: includes/functions/settings/_settings_page_setup.php:22
@@ -11367,17 +11378,6 @@ msgstr ""
 
 #: includes/functions/settings/_settings_actions.php:134
 msgid "The Patreon access token could not be retrieved."
-msgstr ""
-
-#: includes/functions/settings/_settings_page_general.php:1490
-#, php-format
-msgid ""
-"The query responsible for <a href=\"%s\" target=\"_blank\">finding the last "
-"modified post date</a> can be extremely slow if you have a large database, "
-"potentially causing your site to crash under heavy traffic. While object "
-"caching, if available, should prevent this, there have been instances where "
-"it failed. This solution caches the date in a simple Transient for 5 minutes,"
-" which is a tried and proven approach."
 msgstr ""
 
 #: includes/functions/settings/_settings_page_general.php:1488
